--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,8 @@
 html {
   font-family: 'HelveticaNeue', Arial, sans-serif;
   font-weight: 300;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .main {
@@ -119,6 +121,14 @@ html {
 .header-logo {
   margin: 30px 50px;
   width: 325px;
+  background: url("../images/logo-min.png") no-repeat;
+}
+
+.header-logo a {
+  color: transparent;
+  font-size: 50px;
+  letter-spacing: 12px;
+  word-spacing: 7px;
 }
 
 .header .go-to-mobile {
@@ -222,10 +232,11 @@ html {
 .contact__link {
   color: #fff;
   text-decoration: none;
-  padding: 10px;
   position: relative;
+  padding-bottom: 10px;
   font-family: 'OpenSans', sans-serif;
   display: inline-block;
+  font-size: 15px;
 }
 
 .contact__link:hover {
@@ -234,17 +245,21 @@ html {
 
 .contact .icon--contact {
   vertical-align: top;
+  text-decoration: none;
+  color: #f68235;
+  position: relative;
 }
 
 .contact .icon--contact:not(:last-child) {
   margin-right: 20px;
 }
 
-.contact .icon--contact:before {
+.contact .icon--contact::before {
   border-radius: 999rem;
   border: 1px solid #f68235;
   padding: 5px;
   font-size: 10px;
+  position: absolute;
 }
 
 .basket {
@@ -261,7 +276,7 @@ html {
   height: 13px;
   position: absolute;
   text-align: center;
-  top: 3px;
+  top: 0;
   left: 14px;
 }
 
@@ -309,20 +324,25 @@ html {
   position: absolute;
   top: 50%;
   right: 9px;
-  width: 10px;
-  height: 10px;
+  height: 16px;
   border: 2px solid #f68235;
   border-radius: 100%;
   -webkit-transform: translateY(-50%) rotate(-45deg);
   transform: translateY(-50%) rotate(-45deg);
+  outline: none;
+  background-color: #000;
+}
+
+.search-icon:hover {
+  cursor: pointer;
 }
 
 .search-icon::before {
   content: '';
   position: absolute;
-  top: 8px;
-  left: 2px;
-  height: 5px;
+  top: 12px;
+  left: 5px;
+  height: 8px;
   width: 2px;
   background-color: #f68235;
 }
@@ -427,11 +447,12 @@ html {
   font-weight: 200;
   color: #000;
   margin: 0;
+  display: block;
 }
 
 .photo {
-  background: url("../images/photo-min.jpg") no-repeat;
   width: 60%;
+  display: block;
 }
 
 .description {
@@ -484,23 +505,23 @@ html {
 }
 
 .color--1 {
-  background-color: #636363;
+  background: url(../images/color1-min.png) no-repeat;
 }
 
 .color--2 {
-  background-color: #0a0c44;
+  background: url(../images/color2-min.png) no-repeat;
 }
 
 .color--3 {
-  background-color: #ffc66d;
+  background: url(../images/color3-min.png) no-repeat;
 }
 
 .color--4 {
-  background-color: #b30016;
+  background: url(../images/color4-min.png) no-repeat;
 }
 
 .color--5 {
-  background-color: #abc850;
+  background: url(../images/color5-min.png) no-repeat;
 }
 
 .size {
@@ -736,7 +757,7 @@ html {
   font-size: 13px;
   font-weight: 200;
   margin-top: 14px;
-  margin-left: 22px;
+  margin-left: 19px;
   background-color: #f68235;
   vertical-align: bottom;
   position: relative;
@@ -745,11 +766,11 @@ html {
 }
 
 .add-to-cart:hover {
-  border-radius: 10px;
+  background-color: #ef590e;
 }
 
-.add-to-cart:active {
-  background-color: #ef590e;
+.add-to-cart:visited {
+  color: #000;
 }
 
 .add-to-cart__text {
@@ -844,8 +865,12 @@ html {
   padding: 20px 0;
 }
 
-.details.close div,
-.details.close p {
+.details.close .details__item,
+.details.close .details__item-title,
+.details.close .details__item-value,
+.details.close .details__code,
+.details.close .details__info,
+.details.close .details__text {
   display: none;
 }
 
@@ -874,12 +899,24 @@ html {
 }
 
 .details__item {
-  padding-right: 45px;
   font-size: 14px;
 }
 
 .details__item-title {
   font-weight: 600;
+  margin-right: 5px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.details__item-value {
+  display: inline-block;
+  width: 80%;
+  margin: 0;
+}
+
+.details__item b {
+  font-weight: bold;
   margin-right: 5px;
 }
 
@@ -891,10 +928,15 @@ html {
 .details__code-title {
   font-weight: 600;
   margin-right: 5px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .details__code-number {
   color: #a7a7a7;
+  display: inline-block;
+  width: 75%;
+  margin: 0;
 }
 
 .details__info {
@@ -906,13 +948,13 @@ html {
   font-size: 14px;
 }
 
-.details__text.details__text--important {
-  font-weight: 600;
-  padding-right: 35px;
+.details__text b {
+  font-weight: bold;
+  display: inline-block;
   margin-top: 20px;
 }
 
-.details__text.details__text--important a {
+.details__text b a {
   color: #000;
 }
 
@@ -1012,28 +1054,28 @@ html {
   color: #f68235;
 }
 
-.see-other {
+.recommendation {
   border-top: 1px solid #dedede;
   padding: 50px 0;
   text-align: center;
   font-size: 14px;
 }
 
-.see-other__text {
+.recommendation__text {
   color: #000;
   font-weight: 600;
   margin-right: 20px;
 }
 
-.see-other__link {
+.recommendation__link {
   color: #999;
 }
 
-.see-other__link:not(:last-child) {
+.recommendation__link:not(:last-child) {
   margin-right: 20px;
 }
 
-.see-other__link:hover {
+.recommendation__link:hover {
   color: #000;
 }
 
@@ -1062,17 +1104,17 @@ html {
 
 .benefits__item-text {
   font-size: 14px;
-  padding: 0 70px;
+  padding: 0 55px;
 }
 
 .benefits__item-link {
+  display: inline-block;
+  margin: 0 5px;
   color: #000;
-  margin: 5px;
 }
 
-.benefits__item span {
-  display: block;
-  margin: 0 -15px;
+.benefits__item-link[href^="tel:"] {
+  text-decoration: none;
 }
 
 .to-top {
@@ -1081,22 +1123,8 @@ html {
   right: 50px;
   width: 59px;
   height: 59px;
-  background-color: #dedede;
-  border: 1px solid #ccc;
+  background: url(../images/to-top-min.png) no-repeat;
   display: block;
-}
-
-.to-top::after {
-  content: "";
-  border-top: 3px solid #000;
-  border-right: 3px solid #000;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  -webkit-transform: translate(-50%) rotate(-45deg);
-  transform: translate(-50%) rotate(-45deg);
 }
 
 .footer {
@@ -1167,6 +1195,13 @@ html {
   height: 37px;
   float: right;
   margin-bottom: 20px;
+  background: url("../images/logo-footer-min.png") no-repeat;
+}
+
+.footer-logo a {
+  font-size: 36px;
+  color: transparent;
+  letter-spacing: 42px;
 }
 
 .footer-social-credit {
@@ -1222,25 +1257,12 @@ html {
 
 .credit {
   margin-top: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
   margin-left: 48px;
-}
-
-.credit__item {
-  width: 37px;
+  width: 131px;
   height: 24px;
 }
 
-.credit__item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.credit__item-img {
+.credit__img {
   width: 100%;
   height: auto;
 }
@@ -1274,6 +1296,7 @@ html {
     -ms-flex-order: 1;
     order: 1;
     margin: 18px;
+    background: url("../images/logo-tab-min.png") no-repeat;
   }
 
   .switcher {
@@ -1292,6 +1315,10 @@ html {
     margin-top: 10px;
   }
 
+  .contact span:not(:first-child) {
+    font-size: 12px;
+  }
+
   .main-menu {
     -webkit-box-ordinal-group: 5;
     -ms-flex-order: 4;
@@ -1307,10 +1334,6 @@ html {
 
   .product__subtitle {
     padding-right: 90px;
-  }
-
-  .photo {
-    background: url("../images/photo-tab-min.jpg") no-repeat;
   }
 
   .price--old {
@@ -1443,7 +1466,7 @@ html {
     display: inline-block;
   }
 
-  .see-other {
+  .recommendation {
     padding: 35px 0;
     font-size: 12px;
   }
