--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,9 +6,17 @@
 	&-logo {
 		margin: 30px 50px;
 		width: 325px;
+		background: url('../images/logo-min.png') no-repeat;
 		@include respond-to(tablets) {
 			order: 1;
 			margin: 18px;
+			background: url('../images/logo-tab-min.png') no-repeat;
+		}
+		a {
+			color: transparent;
+			font-size: 50px;
+			letter-spacing: 12px;
+			word-spacing: 7px;
 		}
 	}
 	.go-to-mobile {
@@ -116,28 +124,38 @@
 		display: block;
 		padding-left: 34px;
 		font-family: 'OpenSans', sans-serif;
+		&:not(:first-child) {
+			@include respond-to(tablets) {
+				font-size: 12px;
+			}
+		}
 	}
 	&__link {
 		color: #fff;
 		text-decoration: none;
-		padding: 10px;
 		position: relative;
+		padding-bottom: 10px;
 		font-family: 'OpenSans', sans-serif;
 		display: inline-block;
+		font-size: 15px;
 		&:hover {
 			text-decoration: underline;
 		}
 	}
 	.icon--contact {
 		vertical-align: top;
+		text-decoration: none;
+		color: #f68235;
+		position: relative;
 		&:not(:last-child) {
 			margin-right: 20px;
 		}
-		&:before {
+		&::before {
 			border-radius: 999rem;
 			border: 1px solid #f68235;
 			padding: 5px;
 			font-size: 10px;
+			position: absolute;
 		}
 	}
 }
@@ -154,7 +172,7 @@
 		height: 13px;
 		position: absolute;
 		text-align: center;
-		top: 3px;
+		top: 0;
 		left: 14px;
 	}
 }
@@ -187,17 +205,21 @@
 		position: absolute;
 		top: 50%;
 		right: 9px;
-		width: 10px;
-		height: 10px;
+		height: 16px;
 		border: 2px solid #f68235;
 		border-radius: 100%;
 		transform: translateY(-50%) rotate(-45deg);
+		outline: none;
+		background-color: #000;
+		&:hover {
+			cursor: pointer;
+		}
 		&::before {
 			content: '';
 			position: absolute;
-			top: 8px;
-			left: 2px;
-			height: 5px;
+			top: 12px;
+			left: 5px;
+			height: 8px;
 			width: 2px;
 			background-color: #f68235;
 		}
