--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
 	head
 		title= "Card"
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="css/normalize.css")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
@@ -11,8 +11,7 @@ html(lang="en")
 			div(class="go-to-mobile")
 				a(href="./mobile.html", class="mob-link") Go to mob
 			div(class="header-logo", id="logo")
-				a(href="#")
-					img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
+				a(href="#") One CLub
 			div(class="switcher")
 				a(href="#", class="switcher__item icon icon--clock")
 					span Акции
@@ -20,16 +19,16 @@ html(lang="en")
 					span Каталог
 			div(class="contact-search")
 				div(class="contact")
-					div(class="phone icon icon--phone icon--contact")
-						a(href="tel: +380443590899", class="contact__link") +380 44 359-08-99
+					a(href="tel: +380443590899", class="phone icon icon--phone icon--contact")
+						span(class="contact__link") +380 44 359-08-99
 						span Пн-Вс: 9:00-21:00
-					div(class="login icon icon--avatar icon--contact")
-						a(href="#", class="contact__link") Войти
-					div(class="basket icon icon--shopping-cart icon--contact")
-						a(href="#", class="contact__link") Корзина
-				div(class="search")
+					a(href="#", class="login icon icon--avatar icon--contact")
+						span(class="contact__link") Войти
+					a(href="#", class="basket icon icon--shopping-cart icon--contact")
+						span(class="contact__link") Корзина
+				form(action="#", class="search")
 					input(type="search", placeholder="Поиск...", class="search__input")
-					div(class="search-icon")
+					button(type="submit", class="search-icon")
 			nav(class="main-menu")
 				a(href="#", class="main-menu__item") Женщинам
 				a(href="#", class="main-menu__item") Мужчинам
@@ -50,10 +49,11 @@ html(lang="en")
 				div(class="time-left icon icon--clock")
 					span(class="time-left__text") До конца распродажи
 					span(class="time-left__time") 3 дня, 15:37:01
-				div(class="photo")
+				a(href="http://placehold.it", class="photo")
+					img(src="http://placehold.it/446x655")
 				div(class="description")
 					h1(class="product__title") Current Elliott
-					h2(class="product__subtitle") Costa Patch Pocket Denim Top
+						span(class="product__subtitle") Costa Patch Pocket Denim Top
 					div(class="price")
 						span(class="price--old") 30 000 грн
 						span(class="price--new") 15 000 грн
@@ -82,7 +82,7 @@ html(lang="en")
 						span(class="quantity__text") Количество:
 						div(class="quantity__count")
 							div(class="quantity__count-less")
-							input(type="text", value="1", class="quantity__count-number")
+							input(type="tel", value="1", class="quantity__count-number")
 							div(class="quantity__count-more")
 						a(href="#", class="like icon icon--heart") 
 							span В избранное 
@@ -101,43 +101,45 @@ html(lang="en")
 							a(href="#", class="location__text") Наличие в бутиках ONE CLUB
 					div(class="details")
 						h3(class="details__title") Описание и детали
-						div(class="details__item")
-							span(class="details__item-title") Состав:
-							span(class="details__item-value") 100% трикотаж
-						div(class="details__item")
-							span(class="details__item-title") Сезон:
-							span(class="details__item-value") демисезон
-						div(class="details__item")
-							span(class="details__item-title") Детали:
-							span(class="details__item-value") Облегающая модель выполнена из гладкого трико-тажа.
-						div(class="details__code")
-							span(class="details__code-title") Код товара:
-							span(class="details__code-number") 1234-5678-8765-4321
+						dl(class="details__item")
+							dt(class="details__item-title") Состав:
+							dd(class="details__item-value") 100% трикотаж
+							dt(class="details__item-title") Сезон:
+							dd(class="details__item-value") демисезон
+							dt(class="details__item-title") Детали:
+							dd(class="details__item-value") Облегающая модель выполнена из гладкого трикотажа.
+						dl(class="details__code")
+							dt(class="details__code-title") Код товара:
+							dd(class="details__code-number") 1234-5678-8765-4321
 					div(class="details")
 						h3(class="details__title") Измерения
 						div(class="details__item")
-							span(class="details__item-title") Размер вещи на фото:
-							span(class="details__item-value") S
+							b Размер вещи на фото:
+							| S
 						div(class="details__info")
 							p(class="details__text") Обхват груди: 85 см
 							p(class="details__text") Обхват талии: 61 см
 							p(class="details__text") Обхват бедер: 89 см
 							p(class="details__text") Рост: 175 см
-						p(class="details__text details__text--important") Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, 
+						p(class="details__text") 
+							b Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, 
 								a(href="#") таблицей размеров
 								|, или обратитесь к нашему консультанту
 					div(class="details")
 						h3(class="details__title") Доставка и возврат
 						div(class="details__item")
-							span(class="details__item-title") Ожидаемая дата доставки:
-							span(class="details__item-value") 21.09.2016 - 23.09.2016
-						p(class="details__text details__text--important") Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.
-						p(class="details__text details__text--important") Вы можете выбрать любой удобный способ доставки:
+							b Ожидаемая дата доставки:
+							| 21.09.2016 - 23.09.2016
+						p(class="details__text") 
+							b Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.
+						p(class="details__text") 
+							b Вы можете выбрать любой удобный способ доставки:
 						p(class="details__text")
 							span(class="details__text-item") 1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.
 							span(class="details__text-item") 2. Курьером по Киеву.
 							span(class="details__text-item") 3. Сервисом доставки "Нова пошта" по всей Украине.
-						p(class="details__text details__text--important") Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
+						p(class="details__text") 
+							b Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
 					div(class="social")
 						span(class="social__text") Поделиться
 						div(class="social-links")
@@ -184,12 +186,12 @@ html(lang="en")
 						div(class="item__price")
 							span(class="item__price price--old") 30 000 грн
 							span(class="item__price price--new") 15 000 грн
-			section(class="see-other")
-				span(class="see-other__text") Смотрите также:
-				a(href="#", class="see-other__link") Одежда
-				a(href="#", class="see-other__link") Трикотаж
-				a(href="#", class="see-other__link") Шелк
-				a(href="#", class="see-other__link") Все товары бренда Philipp Plein
+			section(class="recommendation")
+				span(class="recommendation__text") Смотрите также:
+				a(href="#", class="recommendation__link") Одежда
+				a(href="#", class="recommendation__link") Трикотаж
+				a(href="#", class="recommendation__link") Шелк
+				a(href="#", class="recommendation__link") Все товары бренда Philipp Plein
 			section(class="benefits")
 				div(class="benefits__item")
 					h3(class="benefits__item-title") Ценность
@@ -201,8 +203,10 @@ html(lang="en")
 						| или заказать доставку по любому удобному адресу.
 				div(class="benefits__item")
 					h3(class="benefits__item-title") Помощь
-					p(class="benefits__item-text") Время работы службы поддержки: ежедневно с 10:00 до 21:00. 
-						span +38 044 359-08-99, +38 095 458-98-46
+					p(class="benefits__item-text") Время работы службы поддержки: ежедневно с 10:00 до 21:00.
+						br
+						a(href="tel: +380443590899", class="benefits__item-link") +38 044 359-08-99,
+						a(href="tel: +380954589846", class="benefits__item-link") +38 095 458-98-46
 			a(href="#logo", class="to-top")
 		footer(class="footer")
 			nav(class="footer__main-menu")
@@ -228,8 +232,7 @@ html(lang="en")
 				a(href="#", class="footer__about-menu-item") FAQ
 			div(class="copy")
 				div(class="footer-logo")
-					a(href="#")
-						img(src="images/logo-footer-min.png", alt="logo", class="logo-img")
+					a(href="#") One Club
 				span(class="copy-text") &copy; 2016 ONE CLUB 2.0
 				span(class="copy-text") All Right reserved
 				div(class="footer-social-credit")
@@ -239,11 +242,6 @@ html(lang="en")
 						a(href="#", class="footer-social__item icon icon--twitter")
 						a(href="#", class="footer-social__item icon icon--pinterest")
 					div(class="credit")
-						div(class="credit__item")
-							img(src="images/visa-min.png", alt="visa", class="credit__visa-img")
-						div(class="credit__item")
-							img(src="images/master-card-min.png", alt="master-card", class="credit__master-card-img")
-						div(class="credit__item")
-							img(src="images/liqpay-min.png", alt="liqpay", class="credit__liqpay-img")
+						img(src="images/credit-min.png", alt="credit", class="credit__img")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 		script(src="js/main.js")
