--- a/assets/scss/icons/_iconfont__varible.scss
+++ b/assets/scss/icons/_iconfont__varible.scss
@@ -15,12 +15,16 @@ $icon-instagram: "\EA07" !default;
 
 $icon-location-pin: "\EA08" !default;
 
-$icon-phone: "\EA09" !default;
+$icon-minus: "\EA09" !default;
 
-$icon-pinterest: "\EA0A" !default;
+$icon-phone: "\EA0A" !default;
 
-$icon-shopping-cart: "\EA0B" !default;
+$icon-pinterest: "\EA0B" !default;
 
-$icon-twitter: "\EA0C" !default;
+$icon-plus: "\EA0C" !default;
 
-$icon-vk: "\EA0D" !default;
+$icon-shopping-cart: "\EA0D" !default;
+
+$icon-twitter: "\EA0E" !default;
+
+$icon-vk: "\EA0F" !default;
