--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -48,24 +48,32 @@
   content: "";
 }
 
-.icon.icon--phone:before {
+.icon.icon--minus:before {
   content: "";
 }
 
-.icon.icon--pinterest:before {
+.icon.icon--phone:before {
   content: "";
 }
 
-.icon.icon--shopping-cart:before {
+.icon.icon--pinterest:before {
   content: "";
 }
 
-.icon.icon--twitter:before {
+.icon.icon--plus:before {
   content: "";
 }
 
-.icon.icon--vk:before {
+.icon.icon--shopping-cart:before {
   content: "";
+}
+
+.icon.icon--twitter:before {
+  content: "";
+}
+
+.icon.icon--vk:before {
+  content: "";
 }
 
 @font-face {
@@ -119,7 +127,14 @@ html {
 }
 
 .header-logo {
-  width: 168x;
+  width: 168px;
+  background: url(../images/m-logo-min.png) no-repeat;
+}
+
+.header-logo a {
+  color: transparent;
+  font-size: 10px;
+  letter-spacing: 37px;
 }
 
 .main-menu {
@@ -291,10 +306,12 @@ html {
   color: #000;
   margin: 0;
   padding-right: 140px;
+  display: block;
 }
 
 .photo {
   margin-bottom: 20px;
+  display: block;
 }
 
 .price {
@@ -362,23 +379,23 @@ html {
 }
 
 .color--1 {
-  background-color: #636363;
+  background: url(../images/color1-min.png) no-repeat;
 }
 
 .color--2 {
-  background-color: #0a0c44;
+  background: url(../images/color2-min.png) no-repeat;
 }
 
 .color--3 {
-  background-color: #ffc66d;
+  background: url(../images/color3-min.png) no-repeat;
 }
 
 .color--4 {
-  background-color: #b30016;
+  background: url(../images/color4-min.png) no-repeat;
 }
 
 .color--5 {
-  background-color: #abc850;
+  background: url(../images/color5-min.png) no-repeat;
 }
 
 .size {
@@ -621,11 +638,11 @@ html {
 }
 
 .add-to-cart:hover {
-  border-radius: 10px;
+  background-color: #ef590e;
 }
 
-.add-to-cart:active {
-  background-color: #ef590e;
+.add-to-cart:visited {
+  color: #000;
 }
 
 .add-to-cart__text {
@@ -714,11 +731,16 @@ html {
 .details {
   border-top: 1px solid #dedede;
   padding: 20px 0;
-}
-
-.details.close div,
-.details.close p {
-  display: none;
+  /*&.close {
+		.details__item, 
+		.details__item-title, 
+		.details__item-value,
+		.details__code,
+		.details__info,
+		.details__text {
+			display: none;
+		}
+	}*/
 }
 
 .details__title {
@@ -733,25 +755,44 @@ html {
   cursor: pointer;
 }
 
-.details__title::after {
+.details__title::before {
   position: absolute;
+  right: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  right: 0;
-  content: "";
-  width: 16px;
-  height: 2px;
-  background-color: #000;
+}
+
+.details__title span {
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.details__title.icon--plus ~ .details__item,
+.details__title.icon--plus ~ .details__code,
+.details__title.icon--plus ~ .details__info,
+.details__title.icon--plus ~ .details__text {
+  display: none;
 }
 
 .details__item {
-  padding-right: 45px;
   font-size: 12px;
 }
 
 .details__item-title {
   font-weight: 600;
+  margin-right: 5px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.details__item-value {
+  display: inline-block;
+  width: 80%;
+  margin: 0;
+}
+
+.details__item b {
+  font-weight: bold;
   margin-right: 5px;
 }
 
@@ -763,10 +804,15 @@ html {
 .details__code-title {
   font-weight: 600;
   margin-right: 5px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .details__code-number {
   color: #a7a7a7;
+  display: inline-block;
+  width: 70%;
+  margin: 0;
 }
 
 .details__info {
@@ -778,13 +824,13 @@ html {
   font-size: 12px;
 }
 
-.details__text.details__text--important {
-  font-weight: 600;
-  padding-right: 35px;
+.details__text b {
+  font-weight: bold;
+  display: inline-block;
   margin-top: 20px;
 }
 
-.details__text.details__text--important a {
+.details__text b a {
   color: #000;
 }
 
@@ -798,10 +844,6 @@ html {
   padding: 20px 0;
 }
 
-.similar-goods.close div {
-  display: none;
-}
-
 .similar-goods__title {
   margin: 0;
   font-weight: 300;
@@ -810,16 +852,21 @@ html {
   position: relative;
 }
 
-.similar-goods__title::after {
+.similar-goods__title::before {
   position: absolute;
+  right: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  right: 0;
-  content: "";
-  width: 16px;
-  height: 2px;
-  background-color: #000;
+}
+
+.similar-goods__title span {
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.similar-goods__title.icon--plus ~ .similar-goods__block,
+.similar-goods__title.icon--plus ~ .social {
+  display: none;
 }
 
 .similar-goods__block {
@@ -899,26 +946,26 @@ html {
   text-decoration: none;
 }
 
-.see-other {
+.recommendation {
   border-top: 1px solid #dedede;
   padding: 20px 0;
   font-size: 12px;
 }
 
-.see-other__text {
+.recommendation__text {
   color: #000;
   font-weight: 600;
   display: block;
   margin-bottom: 20px;
 }
 
-.see-other__link {
+.recommendation__link {
   color: #999;
   display: block;
   line-height: 24px;
 }
 
-.see-other__link:hover {
+.recommendation__link:hover {
   color: #000;
 }
 
@@ -944,6 +991,13 @@ html {
   height: 25px;
   margin: 0 auto;
   margin-bottom: 20px;
+  background: url("../images/logo-mob-footer-min.png") no-repeat;
+}
+
+.footer-logo a {
+  font-size: 13px;
+  color: transparent;
+  letter-spacing: 36px;
 }
 
 .footer-social-credit {
