--- a/scss/_m-product.scss
+++ b/scss/_m-product.scss
@@ -12,11 +12,13 @@
 		color: #000;
 		margin: 0;
 		padding-right: 140px;
+		display: block;
 	}
 }
 
 .photo {
 	margin-bottom: 20px;
+	display: block;
 }
 
 .price {
@@ -73,19 +75,19 @@
 		}
 	}
 	&--1 {
-		background-color: #636363;
+		background: url(../images/color1-min.png) no-repeat;
 	}
 	&--2 {
-		background-color: #0a0c44;
+		background: url(../images/color2-min.png) no-repeat;
 	}
 	&--3 {
-		background-color: #ffc66d;
+		background: url(../images/color3-min.png) no-repeat;
 	}
 	&--4 {
-		background-color: #b30016;
+		background: url(../images/color4-min.png) no-repeat;
 	}
 	&--5 {
-		background-color: #abc850;
+		background: url(../images/color5-min.png) no-repeat;
 	}
 }
 
@@ -293,10 +295,10 @@
 	float: right;
 	text-decoration: none;
 	&:hover {
-		border-radius: 10px;
-	}
-	&:active {
 		background-color: #ef590e;
+	}
+	&:visited {
+		color: #000;
 	}
 	&__text {
 		text-transform: uppercase;
@@ -380,11 +382,16 @@
 .details {
 	border-top: 1px solid #dedede;
 	padding: 20px 0;
-	&.close {
-		div, p {
+	/*&.close {
+		.details__item, 
+		.details__item-title, 
+		.details__item-value,
+		.details__code,
+		.details__info,
+		.details__text {
 			display: none;
 		}
-	}
+	}*/
 	&__title {
 		margin: 0;
 		font-weight: 300;
@@ -394,22 +401,39 @@
 		&:hover {
 			cursor: pointer;
 		}
-		&::after {
+		&::before {
 			position: absolute;
+			right: 0;
 			top: 50%;
 			transform: translateY(-50%);
-			right: 0;
-			content: "";
-			width: 16px;
-			height: 2px;
-			background-color: #000;
+		}
+		span {
+			font-family: 'HelveticaNeue', Arial, sans-serif;
+		}
+		&.icon--plus {
+			& ~ .details__item, 
+			& ~ .details__code, 
+			& ~ .details__info,
+			& ~ .details__text {
+				display: none;
+			}
 		}
 	}
 	&__item {
-		padding-right: 45px;
 		font-size: 12px;
 		&-title {
 			font-weight: 600;
+			margin-right: 5px;
+			display: inline-block;
+			vertical-align: top;
+		}
+		&-value {
+			display: inline-block;
+			width: 80%;
+			margin: 0;
+		}
+		b {
+			font-weight: bold;
 			margin-right: 5px;
 		}
 	}
@@ -419,9 +443,14 @@
 		&-title {
 			font-weight: 600;
 			margin-right: 5px;
+			display: inline-block;
+			vertical-align: top;
 		}
 		&-number {
 			color: #a7a7a7;
+			display: inline-block;
+			width: 70%;
+			margin: 0;
 		}
 	}
 	&__info {
@@ -430,9 +459,9 @@
 	&__text {
 		margin: 0;
 		font-size: 12px;
-		&.details__text--important {
-			font-weight: 600;
-			padding-right: 35px;
+		b {
+			font-weight: bold;
+			display: inline-block;
 			margin-top: 20px;
 			a {
 				color: #000;
