--- a/scss/_m-similar-goods.scss
+++ b/scss/_m-similar-goods.scss
@@ -1,26 +1,26 @@
 .similar-goods {
 	border-top: 1px solid #dedede;
 	padding: 20px 0;
-	&.close {
-		div {
-			display: none;
-		}
-	}
 	&__title {
 		margin: 0;
 		font-weight: 300;
 		font-size: 18px;
 		margin-bottom: 18px;
 		position: relative;
-		&::after {
+		&::before {
 			position: absolute;
+			right: 0;
 			top: 50%;
 			transform: translateY(-50%);
-			right: 0;
-			content: "";
-			width: 16px;
-			height: 2px;
-			background-color: #000;
+		}
+		span {
+			font-family: 'HelveticaNeue', Arial, sans-serif;
+		}
+		&.icon--plus {
+			& ~ .similar-goods__block,
+			& ~ .social {
+				display: none;
+			}
 		}
 	}
 	&__block {
