--- a/views/index.pug
+++ b/views/index.pug
@@ -100,7 +100,8 @@ html(lang="en")
 						div(class="location icon icon--location-pin")
 							a(href="#", class="location__text") Наличие в бутиках ONE CLUB
 					div(class="details")
-						h3(class="details__title") Описание и детали
+						h3(class="details__title icon icon--minus") 
+							span Описание и детали
 						dl(class="details__item")
 							dt(class="details__item-title") Состав:
 							dd(class="details__item-value") 100% трикотаж
@@ -112,7 +113,8 @@ html(lang="en")
 							dt(class="details__code-title") Код товара:
 							dd(class="details__code-number") 1234-5678-8765-4321
 					div(class="details")
-						h3(class="details__title") Измерения
+						h3(class="details__title icon icon--minus") 
+							span Измерения
 						div(class="details__item")
 							b Размер вещи на фото:
 							| S
@@ -126,7 +128,8 @@ html(lang="en")
 								a(href="#") таблицей размеров
 								|, или обратитесь к нашему консультанту
 					div(class="details")
-						h3(class="details__title") Доставка и возврат
+						h3(class="details__title icon icon--minus") 
+							span Доставка и возврат
 						div(class="details__item")
 							b Ожидаемая дата доставки:
 							| 21.09.2016 - 23.09.2016
