--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -568,13 +568,13 @@ html {
 .quantity__left {
   position: absolute;
   top: -54px;
-  left: 0;
   background-color: #eaeaea;
   padding: 7px;
   text-align: center;
   font-size: 12px;
   width: 90%;
   left: 10%;
+  color: #000;
 }
 
 .quantity__left-number {
@@ -731,16 +731,6 @@ html {
 .details {
   border-top: 1px solid #dedede;
   padding: 20px 0;
-  /*&.close {
-		.details__item, 
-		.details__item-title, 
-		.details__item-value,
-		.details__code,
-		.details__info,
-		.details__text {
-			display: none;
-		}
-	}*/
 }
 
 .details__title {
