--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -43,8 +43,13 @@ html(lang="en")
 				span /
 				span(class="breadcrumbs__item") Costa Patch Pocket Denim Top
 			section(class="product", id="product")
-				a(href="http://placehold.it", class="photo")
-					img(src="http://placehold.it/260x374")
+				div(class="photo")
+					div(class="photo__nav")
+						a(href="#", class="photo__nav-item active")
+						a(href="#", class="photo__nav-item")
+						a(href="#", class="photo__nav-item")
+						a(href="#", class="photo__nav-item")
+					div(class="photo__view")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
