--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,94 @@ html {
 
 .photo {
   width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.photo__view {
+  width: 481px;
+  height: 641px;
+  background: url("../images/photo-view-min.jpg") no-repeat;
+}
+
+.photo__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.photo__nav .prev {
+  position: relative;
+  width: 1px;
+  height: 16px;
+  background-color: #d0d0d0;
+  margin: 0 auto;
+  margin-bottom: 5px;
+}
+
+.photo__nav .prev::before {
+  content: '';
+  position: absolute;
+  left: -5px;
+  top: 1px;
+  width: 10px;
+  height: 10px;
+  border-top: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.photo__nav-item {
+  margin: 10px auto;
+  border: 2px solid transparent;
+  width: 62px;
+  height: 91px;
   display: block;
+}
+
+.photo__nav-item-jpg {
+  width: 100%;
+  height: auto;
+}
+
+.photo__nav-item.active {
+  border: 2px solid #f68235;
+}
+
+.photo__nav-item:hover {
+  cursor: pointer;
+  border: 2px solid #999;
+}
+
+.photo__nav .next {
+  position: relative;
+  width: 1px;
+  height: 16px;
+  background-color: #f68235;
+  margin: 0 auto;
+  margin-bottom: 5px;
+}
+
+.photo__nav .next::before {
+  content: '';
+  position: absolute;
+  left: -5px;
+  top: 1px;
+  width: 10px;
+  height: 10px;
+  border-top: 1px solid #f68235;
+  border-right: 1px solid #f68235;
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
 }
 
 .description {
@@ -1341,6 +1428,63 @@ html {
 
   .product__subtitle {
     padding-right: 90px;
+  }
+
+  .photo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+
+  .photo__view {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    width: 414px;
+    height: 553px;
+    background: url("../images/photo-view-tab-min.jpg") no-repeat;
+  }
+
+  .photo__nav {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    margin-top: 24px;
+    height: 91px;
+  }
+
+  .photo__nav .prev {
+    height: 1px;
+    width: 16px;
+    margin: 50px 30px;
+  }
+
+  .photo__nav .prev::before {
+    left: 1px;
+    top: -5px;
+    -webkit-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+  }
+
+  .photo__nav .next {
+    height: 1px;
+    width: 16px;
+    margin: 50px 30px;
+  }
+
+  .photo__nav .next::before {
+    left: 1px;
+    top: -5px;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
   }
 
   .price--old {
