--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -65,12 +65,16 @@
 	&__view {
 		width: 481px;
 		height: 641px;
-		background: url('../images/photo-view-min.jpg') no-repeat;
+		//background: url('../images/photo-view-min.jpg') no-repeat;
 		@include respond-to(tablets) {
 			order: 1;
 			width: 414px;
 			height: 553px;
-			background: url('../images/photo-view-tab-min.jpg') no-repeat;
+			//background: url('../images/photo-view-tab-min.jpg') no-repeat;
+		}
+		&-img {
+			width: 100%;
+			height: 100%;
 		}
 	}
 	&__nav {
@@ -96,7 +100,7 @@
 				width: 16px;
 				margin: 50px 30px;
 				&::before {
-					left: 1px;
+					left: 3px;
 					top: -5px;
 					transform: rotate(45deg);
 				}
@@ -127,12 +131,25 @@
 			width: 62px;
 			height: 91px;
 			display: block;
-			&-jpg {
-				width: 100%;
-				height: auto;
+			&.nav-item--1 {
+				background: url('../images/photo1-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--2 {
+				background: url('../images/photo2-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--3 {
+				background: url('../images/photo3-min.jpg') no-repeat;
+				background-size: 100%;
+			}
+			&.nav-item--4 {
+				background: url('../images/photo4-min.jpg') no-repeat;
+				background-size: 100%;
 			}
 			&.active {
 				border: 2px solid #f68235;
+				background-size: 100%;
 			}
 			&:hover {
 				cursor: pointer;
@@ -150,7 +167,7 @@
 				content: '';
 				position: absolute;
 				left: -5px;
-				top: 1px;
+				top: 3px;
 				width: 10px;
 				height: 10px;
 				border-top: 1px solid #f68235;
