--- a/views/index.pug
+++ b/views/index.pug
@@ -52,16 +52,13 @@ html(lang="en")
 				div(class="photo")
 					div(class="photo__nav")
 						div(class="prev")
-						a(href="#", class="photo__nav-item active")
-							img(src="images/photo1-min.jpg", alt="photo1", class="photo__nav-item-jpg")
-						a(href="#", class="photo__nav-item")
-							img(src="images/photo2-min.jpg", alt="photo2", class="photo__nav-item-jpg")
-						a(href="#", class="photo__nav-item")
-							img(src="images/photo3-min.jpg", alt="photo3", class="photo__nav-item-jpg")
-						a(href="#", class="photo__nav-item")
-							img(src="images/photo4-min.jpg", alt="photo4", class="photo__nav-item-jpg")
+						a(href="javascript:l_image ('images/photo1-min.jpg')", class="photo__nav-item nav-item--1 active")
+						a(href="javascript:l_image ('images/photo2-min.jpg')", class="photo__nav-item nav-item--2")
+						a(href="javascript:l_image ('images/photo3-min.jpg')", class="photo__nav-item nav-item--3")
+						a(href="javascript:l_image ('images/photo4-min.jpg')", class="photo__nav-item nav-item--4")
 						div(class="next")
 					div(class="photo__view")
+						img(src="images/photo1-min.jpg", name="example_img", class="photo__view-img")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
