--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -45,11 +45,12 @@ html(lang="en")
 			section(class="product", id="product")
 				div(class="photo")
 					div(class="photo__nav")
-						a(href="#", class="photo__nav-item active")
-						a(href="#", class="photo__nav-item")
-						a(href="#", class="photo__nav-item")
-						a(href="#", class="photo__nav-item")
+						a(href="javascript:l_image ('images/photo1-min.jpg')", class="photo__nav-item nav-item--1 active")
+						a(href="javascript:l_image ('images/photo2-min.jpg')", class="photo__nav-item nav-item--2")
+						a(href="javascript:l_image ('images/photo3-min.jpg')", class="photo__nav-item nav-item--3")
+						a(href="javascript:l_image ('images/photo4-min.jpg')", class="photo__nav-item nav-item--4")
 					div(class="photo__view")
+						img(src="images/photo1-min.jpg", name="example_img", class="photo__view-img")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
