--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -329,8 +329,12 @@ html {
   order: 1;
   width: 260px;
   height: 347px;
-  background: url("../images/photo-view-mob-min.jpg") no-repeat;
   margin-bottom: 24px;
+}
+
+.photo__view-img {
+  width: 100%;
+  height: 100%;
 }
 
 .photo__nav {
