--- a/scss/_m-product.scss
+++ b/scss/_m-product.scss
@@ -25,8 +25,12 @@
 		order: 1;
 		width: 260px;
 		height: 347px;
-		background: url('../images/photo-view-mob-min.jpg') no-repeat;
+		//background: url('../images/photo-view-mob-min.jpg') no-repeat;
 		margin-bottom: 24px;
+		&-img {
+			width: 100%;
+			height: 100%;
+		}
 	}
 	&__nav {
 		display: flex;
