--- a/assets/scss/icons/_iconfont__varible.scss
+++ b/assets/scss/icons/_iconfont__varible.scss
@@ -3,28 +3,30 @@ $icon-avatar: "\EA01" !default;
 
 $icon-clock: "\EA02" !default;
 
-$icon-facebook: "\EA03" !default;
+$icon-close: "\EA03" !default;
 
-$icon-google-plus: "\EA04" !default;
+$icon-facebook: "\EA04" !default;
 
-$icon-hanger: "\EA05" !default;
+$icon-google-plus: "\EA05" !default;
 
-$icon-heart: "\EA06" !default;
+$icon-hanger: "\EA06" !default;
 
-$icon-instagram: "\EA07" !default;
+$icon-heart: "\EA07" !default;
 
-$icon-location-pin: "\EA08" !default;
+$icon-instagram: "\EA08" !default;
 
-$icon-minus: "\EA09" !default;
+$icon-location-pin: "\EA09" !default;
 
-$icon-phone: "\EA0A" !default;
+$icon-minus: "\EA0A" !default;
 
-$icon-pinterest: "\EA0B" !default;
+$icon-phone: "\EA0B" !default;
 
-$icon-plus: "\EA0C" !default;
+$icon-pinterest: "\EA0C" !default;
 
-$icon-shopping-cart: "\EA0D" !default;
+$icon-plus: "\EA0D" !default;
 
-$icon-twitter: "\EA0E" !default;
+$icon-shopping-cart: "\EA0E" !default;
 
-$icon-vk: "\EA0F" !default;
+$icon-twitter: "\EA0F" !default;
+
+$icon-vk: "\EA10" !default;
