--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,6 +5,9 @@
 html {
 	font-family: 'HelveticaNeue', Arial, sans-serif;
 	font-weight: 300;
+}
+
+.header, .main, .footer {
 	max-width: 1280px;
 	margin: 0 auto;
 }
