--- a/css/style.css
+++ b/css/style.css
@@ -24,56 +24,60 @@
   content: "";
 }
 
-.icon.icon--facebook:before {
+.icon.icon--close:before {
   content: "";
 }
 
-.icon.icon--google-plus:before {
+.icon.icon--facebook:before {
   content: "";
 }
 
-.icon.icon--hanger:before {
+.icon.icon--google-plus:before {
   content: "";
 }
 
-.icon.icon--heart:before {
+.icon.icon--hanger:before {
   content: "";
 }
 
-.icon.icon--instagram:before {
+.icon.icon--heart:before {
   content: "";
 }
 
-.icon.icon--location-pin:before {
+.icon.icon--instagram:before {
   content: "";
 }
 
-.icon.icon--minus:before {
+.icon.icon--location-pin:before {
   content: "";
 }
 
-.icon.icon--phone:before {
+.icon.icon--minus:before {
   content: "";
 }
 
-.icon.icon--pinterest:before {
+.icon.icon--phone:before {
   content: "";
 }
 
-.icon.icon--plus:before {
+.icon.icon--pinterest:before {
   content: "";
 }
 
-.icon.icon--shopping-cart:before {
+.icon.icon--plus:before {
   content: "";
 }
 
-.icon.icon--twitter:before {
+.icon.icon--shopping-cart:before {
   content: "";
 }
 
-.icon.icon--vk:before {
+.icon.icon--twitter:before {
   content: "";
+}
+
+.icon.icon--vk:before {
+  content: "";
 }
 
 @font-face {
@@ -105,6 +109,11 @@
 html {
   font-family: 'HelveticaNeue', Arial, sans-serif;
   font-weight: 300;
+}
+
+.header,
+.main,
+.footer {
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -1235,6 +1244,107 @@ html {
   height: 59px;
   background: url(../images/to-top-min.png) no-repeat;
   display: block;
+}
+
+.location-popup {
+  min-width: 100%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+}
+
+.location-popup__content {
+  margin: 100px auto;
+  width: 745px;
+  height: 358px;
+}
+
+.popup__header {
+  background-color: #dbdbdb;
+  padding: 10px 18px;
+  position: relative;
+}
+
+.popup__title {
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.popup-close {
+  text-decoration: none;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  color: #727272;
+}
+
+.popup__main {
+  padding: 0 37px;
+  padding-bottom: 58px;
+  background-color: #FFF;
+}
+
+.popup__main-title {
+  padding: 40px 0;
+  text-align: center;
+  display: block;
+  font-size: 15px;
+}
+
+.popup__main-title b {
+  margin: 5px;
+}
+
+.popup__main-locations {
+  border-top: 1px solid #dedede;
+  border-bottom: 1px solid #dedede;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.popup__main-locations-item {
+  margin-top: 50px;
+  padding-bottom: 40px;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.location-title {
+  display: block;
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.location-text {
+  font-size: 13px;
+  display: block;
+  text-align: center;
+}
+
+.location-text a {
+  text-decoration: none;
+  color: #000;
+}
+
+.location-link {
+  color: #000;
+  font-size: 13px;
+  display: block;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  white-space: nowrap;
 }
 
 .footer {
