--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -1014,6 +1014,118 @@ html {
   color: #000;
 }
 
+.location-popup {
+  min-width: 100%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  z-index: 2000;
+}
+
+.location-popup__content {
+  margin: 20px auto;
+  width: 260px;
+  height: 675px;
+}
+
+.popup {
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.popup__header {
+  background-color: #dbdbdb;
+  padding: 10px 100px 9px 8px;
+  position: relative;
+  font-size: 14px;
+}
+
+.popup__title {
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.popup-close {
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  right: 8px;
+  color: #727272;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.popup-close::before {
+  font-size: 20px;
+}
+
+.popup__main {
+  background-color: #FFF;
+}
+
+.popup__main-title {
+  padding: 20px;
+  text-align: center;
+  display: block;
+  font-size: 14px;
+}
+
+.popup__main-title b {
+  margin: 5px;
+}
+
+.popup__main-locations {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.popup__main-locations-item {
+  padding-top: 25px;
+  padding-bottom: 23px;
+  margin-bottom: 25px;
+  position: relative;
+  font-size: 13px;
+  border-top: 1px solid #dedede;
+}
+
+.location-title {
+  display: block;
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.location-text {
+  display: block;
+  text-align: center;
+}
+
+.location-text a {
+  text-decoration: none;
+  color: #000;
+}
+
+.location-link {
+  color: #000;
+  display: block;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
 .footer {
   background-color: #000;
   display: -webkit-box;
