--- a/css/style.css
+++ b/css/style.css
@@ -1257,28 +1257,34 @@ html {
 
 .location-popup__content {
   margin: 100px auto;
-  width: 745px;
+  width: 635px;
   height: 358px;
+}
+
+.popup {
+  font-family: 'HelveticaNeue', Arial, sans-serif;
 }
 
 .popup__header {
   background-color: #dbdbdb;
-  padding: 10px 18px;
+  padding: 12px 36px 10px;
   position: relative;
+  font-size: 18px;
 }
 
 .popup__title {
   text-transform: uppercase;
-  font-size: 15px;
-  font-weight: 300;
+  font-size: 18px;
 }
 
 .popup-close {
   text-decoration: none;
   position: absolute;
-  top: 7px;
+  top: 50%;
   right: 7px;
   color: #727272;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .popup__main {
@@ -1291,7 +1297,7 @@ html {
   padding: 40px 0;
   text-align: center;
   display: block;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .popup__main-title b {
@@ -1314,17 +1320,17 @@ html {
   padding-bottom: 40px;
   margin-bottom: 15px;
   position: relative;
+  font-size: 13px;
 }
 
 .location-title {
   display: block;
   text-align: center;
-  font-size: 15px;
   margin-bottom: 10px;
+  font-size: 14px;
 }
 
 .location-text {
-  font-size: 13px;
   display: block;
   text-align: center;
 }
@@ -1336,7 +1342,6 @@ html {
 
 .location-link {
   color: #000;
-  font-size: 13px;
   display: block;
   text-align: center;
   position: absolute;
@@ -1432,8 +1437,6 @@ html {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -ms-flex-line-pack: end;
-  align-content: flex-end;
 }
 
 .footer-social {
